# camera_zwo_asi

./: .gitignore  CMakeLists.txt
camera_zwo_asi/: camera.py
include/zwo_asi/: VideoThread.hpp  camera.hpp  utils.hpp
src/: VideoThread.cpp  camera.cpp  utils.cpp
srcpy/: bindings.cpp
tests/: testpyqt.py
